--- a/app/package.json
+++ b/app/package.json
@@ -15,6 +15,7 @@
     "@types/cron": "^2.4.0",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.9",
     "@types/winston": "^2.4.4",
@@ -27,6 +28,7 @@
     "cron": "^3.1.6",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
     "morgan": "^1.10.0",
     "winston": "^3.11.0"
