--- a/app/package.json
+++ b/app/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/cron": "^2.4.0",
     "@types/dotenv": "^8.2.0",
@@ -24,6 +25,7 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "cron": "^3.1.6",
     "dotenv": "^16.3.1",
